--- a/Spot/Spot.storyboard
+++ b/Spot/Spot.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0JX-wT-qs4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0JX-wT-qs4">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,15 +22,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="667" translatesAutoresizingMaskIntoConstraints="NO" id="88E-KH-0bL">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="92.5" width="375" height="574.5"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Please mark the problem" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tn2-do-0bx">
+                                <rect key="frame" x="0.0" y="68" width="375" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="88E-KH-0bL" firstAttribute="leading" secondItem="Sor-gp-Qov" secondAttribute="leading" id="c93-Rb-LAh"/>
-                            <constraint firstItem="88E-KH-0bL" firstAttribute="top" secondItem="Sor-gp-Qov" secondAttribute="top" id="e68-JC-QiT"/>
-                            <constraint firstItem="Tap-G9-Wg3" firstAttribute="top" secondItem="88E-KH-0bL" secondAttribute="bottom" id="eXc-LE-GwR"/>
-                            <constraint firstAttribute="trailing" secondItem="88E-KH-0bL" secondAttribute="trailing" id="hTx-y5-Zv9"/>
+                            <constraint firstAttribute="trailing" secondItem="88E-KH-0bL" secondAttribute="trailing" id="2Kc-nt-w2j"/>
+                            <constraint firstItem="88E-KH-0bL" firstAttribute="top" secondItem="Tn2-do-0bx" secondAttribute="bottom" constant="4" id="6oG-8D-mph"/>
+                            <constraint firstItem="Tap-G9-Wg3" firstAttribute="top" secondItem="88E-KH-0bL" secondAttribute="bottom" id="IaM-uW-edE"/>
+                            <constraint firstItem="88E-KH-0bL" firstAttribute="leading" secondItem="Sor-gp-Qov" secondAttribute="leading" id="M6g-QE-YlP"/>
+                            <constraint firstAttribute="trailing" secondItem="Tn2-do-0bx" secondAttribute="trailing" id="bZy-aQ-mDr"/>
+                            <constraint firstItem="Tn2-do-0bx" firstAttribute="top" secondItem="2BQ-1H-KQh" secondAttribute="bottom" constant="4" id="k1N-ht-tET"/>
+                            <constraint firstItem="Tn2-do-0bx" firstAttribute="leading" secondItem="Sor-gp-Qov" secondAttribute="leading" id="nvM-HA-TE5"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zZv-r0-AdK">
@@ -46,6 +55,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="promptLabel" destination="Tn2-do-0bx" id="QPk-Hz-zeL"/>
                         <outlet property="screenshotImageView" destination="88E-KH-0bL" id="44t-5y-auS"/>
                     </connections>
                 </viewController>
